Fix z-index issue on home page

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ img {
     color: #ffffff;
     text-align: center;
     position: relative;
-    z-index: 1;
+    z-index: -1;
     height: 100vh;
 }
 
